--- a/.github/workflows/release-update-download-page.yml
+++ b/.github/workflows/release-update-download-page.yml
@@ -18,24 +18,24 @@ jobs:
     runs-on: ubuntu-latest
     name: update static docs
     steps:
-      - name: Import Secrets
-        id: secrets
-        uses: hashicorp/vault-action@v2.4.3
-        with:
-          url: ${{ secrets.VAULT_ADDR }}
-          method: approle
-          roleId: ${{ secrets.VAULT_ROLE_ID }}
-          secretId: ${{ secrets.VAULT_SECRET_ID }}
-          exportEnv: false
-          secrets: |
-            secret/data/products/cambpm/ci/github-workflow GITHUB_APP_ID;
-            secret/data/products/cambpm/ci/github-workflow GITHUB_APP_PRIVATE_KEY;
-      - name: Generate token for GitHub
-        id: generate-github-token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ steps.secrets.outputs.GITHUB_APP_ID }}
-          private_key: ${{ steps.secrets.outputs.GITHUB_APP_PRIVATE_KEY }}
+      # - name: Import Secrets
+      #   id: secrets
+      #   uses: hashicorp/vault-action@v2.4.3
+      #   with:
+      #     url: ${{ secrets.VAULT_ADDR }}
+      #     method: approle
+      #     roleId: ${{ secrets.VAULT_ROLE_ID }}
+      #     secretId: ${{ secrets.VAULT_SECRET_ID }}
+      #     exportEnv: false
+      #     secrets: |
+      #       secret/data/products/cambpm/ci/github-workflow GITHUB_APP_ID;
+      #       secret/data/products/cambpm/ci/github-workflow GITHUB_APP_PRIVATE_KEY;
+      # - name: Generate token for GitHub
+      #   id: generate-github-token
+      #   uses: tibdex/github-app-token@v1
+      #   with:
+      #     app_id: ${{ steps.secrets.outputs.GITHUB_APP_ID }}
+      #     private_key: ${{ steps.secrets.outputs.GITHUB_APP_PRIVATE_KEY }}
       - name: Checkout camunda-docs-static dir
         id: release-update-download-page
         uses: actions/checkout@v3
@@ -51,4 +51,4 @@ jobs:
           version: ${{ input.version }}
           date: ${{ inputs.date }}
           DRI: ${{ inputs.DRI }}
-          GITHUB_TOKEN: ${{ steps.generate-github-token.outputs.token }}
+          GITHUB_TOKEN: "updateMe" # ${{ steps.generate-github-token.outputs.token }}
