--- a/release-update-download-page/action.yml
+++ b/release-update-download-page/action.yml
@@ -13,15 +13,22 @@ inputs:
   GITHUB_TOKEN:
     description: 'Github Token'
     required: true
-runs:
-  - name: Update Download ReadME
-    env:
-      minorVersion: ${{ input.version }}
-      releaseDate: ${{ inputs.date }}
-    run: ./update-docs.sh
-  - name: Create pull-request
-    env:
-      GITHUB_WORKSPACE: ${{GITHUB_WORKSPACE}}
-      DRI: ${{ inputs.DRI }}
-      GH_TOKEN: ${{ inputs.GITHUB_TOKEN }}
-    run: ./create-pr.sh
+jobs:
+  update_and_create_pr:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Update Download README
+        env:
+          minorVersion: ${{ github.event.inputs.version }}
+          releaseDate: ${{ github.event.inputs.date }}
+        run: ./update-docs.sh
+
+      - name: Create pull-request
+        env:
+          GITHUB_WORKSPACE: ${{ github.workspace }}
+          DRI: ${{ github.event.inputs.DRI }}
+          GH_TOKEN: ${{ github.event.inputs.GITHUB_TOKEN }}
+        run: ./create-pr.sh
