--- a/.github/workflows/release-update-download-page.yml
+++ b/.github/workflows/release-update-download-page.yml
@@ -71,7 +71,7 @@ jobs:
           fi
           
           filePath="$GITHUB_WORKSPACE/camunda-docs-static/enterprise/content/download.md"
-          input_content=$(<"$filePath")
+          input_content=$(cat "$filePath")
           extracted_section=$(echo "$input_content" | awk '/releases:/{flag=1; next} flag && /^$/ {exit} flag')
           
           # White spaces are important for indentation
