--- a/.github/workflows/release-update-download-page.yml
+++ b/.github/workflows/release-update-download-page.yml
@@ -50,12 +50,11 @@ jobs:
           releaseDate: ${{ inputs.date }}
         shell: bash
         run: |
-          # expected env vars: 
-          # minorVersion 'The version of the alpha release'
-          # releaseDate 'The release date'
+          set -xe
           echo $(pwd)
           echo "$GITHUB_WORKSPACE/camunda-docs-static/enterprise/content/download.md"
           echo $(ls)
+          echo$(ls "./camunda-docs-static")
           minorVersion=$(echo $nextVersion | cut -c1-4)
           branchVar="    - branch: \"$minorVersion\""
           header="    - branch: \"$minorVersion\"
