--- a/.github/workflows/release-update-download-page.yml
+++ b/.github/workflows/release-update-download-page.yml
@@ -67,7 +67,7 @@ jobs:
           fi
           
 
-          extracted_section=$(echo "$input_content" | awk '/releases:/{flag=1; next} flag && /^$/ {exit} flag')
+          extracted_section=$(cat "$filePath" | awk '/releases:/{flag=1; next} flag && /^$/ {exit} flag')
           
           # White spaces are important for indentation
           number="       - number: \"$nextVersion\""
