--- a/.github/workflows/release-update-download-page.yml
+++ b/.github/workflows/release-update-download-page.yml
@@ -66,8 +66,7 @@ jobs:
             lineNumber=$(grep -n -m1 'branches:' $filePath | cut -d: -f1)
           fi
           
-
-          extracted_section=$(cat "$filePath" | awk '/releases:/{flag=1; next} flag && /^$/ {exit} flag')
+          extracted_section=$(awk '/releases:/{flag=1; next} flag && /^$/ {exit} flag' "$filePath")
           
           # White spaces are important for indentation
           number="       - number: \"$nextVersion\""
