--- a/.github/workflows/slash-command-action.yml
+++ b/.github/workflows/slash-command-action.yml
@@ -11,7 +11,7 @@ jobs:
   call-reusable-flow:
     if: >
       (github.event_name == 'issues' && github.event.action == 'closed') ||
-      (github.event_name == 'issue_comment' && contains(github.event.comment.body, '/set-version-labels'))
+      (github.event_name == 'issue_comment' && contains(github.event.comment.body, '/run-print-command'))
     runs-on: ubuntu-latest
     steps:
       - name: Print message
