--- a/.github/workflows/slash-command-action.yml
+++ b/.github/workflows/slash-command-action.yml
@@ -5,7 +5,8 @@ on:
     types:
       - closed
   issue_comment:
-    types: [ created ]
+    types: 
+      - created
 
 jobs:
   call-reusable-flow:
